@startuml


skinparam  nodesep 100

hide empty members
title Diagramme de classe du patron de conception "Builder"


class Session <<Director>> {
  + <<construct()>> createNewVisit(treatment: String, diagnostic: String , ...)
}



class VisitBuilder <<ConcreteBuilder>> {
  + <<buildPart()>> setTreatment(designation : String)
  + <<buildPart()>> setTreatment(designation : String)
  + <<result()>> build(): Visit
}

class Visit <<Product>>{
  + this(currentDate Date, currentDoctor Doctor) : Visit
  + setTreatment(t : Treatment)
  + setDiagnostic(t : Diagnostic)
}

class Treatment <<ProductPart>> {
  - designation : String
}
class Diagnostic <<ProductPart>> {
 - designation : String
}

Session ->  VisitBuilder

VisitBuilder . Visit
VisitBuilder *--> Treatment
VisitBuilder *--> Diagnostic

Visit *--> Treatment
Visit *--> Diagnostic

@enduml